--- a/build.properties
+++ b/build.properties
@@ -8,4 +8,4 @@ bin.includes = META-INF/,\
                .,\
                stdlib/,\
                icons/,\
-               utils/js.jar
+               utils/yuicompressor.jar
